--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,4 @@ JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
 JWT_EXPIRES_IN="7d"
 PORT=5000
 NODE_ENV="development"
+FRONTEND_URL="http://localhost:3000"
