--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,8 @@ JWT_EXPIRES_IN="7d"
 PORT=5000
 NODE_ENV="development"
 FRONTEND_URL="http://localhost:3000"
+
+# Stripe Configuration (demo keys for development)
+STRIPE_SECRET_KEY=sk_test_demo_key_for_development
+STRIPE_PUBLISHABLE_KEY=pk_test_demo_key_for_development
+STRIPE_WEBHOOK_SECRET=whsec_demo_webhook_secret
