--- a/backend/.env
+++ b/backend/.env
@@ -4,8 +4,15 @@ JWT_EXPIRES_IN="7d"
 PORT=5000
 NODE_ENV="development"
 FRONTEND_URL="http://localhost:3000"
+BACKEND_URL="http://localhost:5000"
 
 # Stripe Configuration (demo keys for development)
 STRIPE_SECRET_KEY=sk_test_demo_key_for_development
 STRIPE_PUBLISHABLE_KEY=pk_test_demo_key_for_development
 STRIPE_WEBHOOK_SECRET=whsec_demo_webhook_secret
+
+# HitPay Configuration
+HITPAY_API_KEY=your_hitpay_api_key_here
+HITPAY_BASE_URL=https://api.sandbox.hit-pay.com/v1
+HITPAY_SALT=your_hitpay_salt_here
+HITPAY_WEBHOOK_SECRET=your_hitpay_webhook_secret_here
