Add with Qian's security

--- a/backend/.env
+++ b/backend/.env
@@ -18,3 +18,10 @@ HITPAY_SALT=your_hitpay_salt_here
 HITPAY_WEBHOOK_SECRET=your_hitpay_webhook_secret_here
 HITPAY_SANDBOX=true
 WEBHOOK_URL=https://ttytyd.com
+
+# SMTP Configuration for Email (Mailtrap for testing)
+SMTP_HOST=sandbox.smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_USER=your-username-from-mailtrap
+SMTP_PASS=your-password-from-mailtrap
+EMAIL_FROM="Swift Fix Pro <no-reply@swiftfixpro.com>"
